--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@
 }
 
 body{
-    background: rgb(16,14,60);
-    background: linear-gradient(90deg, rgba(16,14,60,1) 0%, rgba(2,2,16,1) 43%, rgba(0,212,255,1) 100%);
+    background-image: url("bg.jpg"); /* The image used */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover;
     color: white;
     font-family: "Amiko",sans-serif;
     min-height: 100vh;;
@@ -36,9 +38,126 @@ form button{
     background: white;
     cursor: pointer;
     transition: all 0.3s ease;
+    border: none;
 }
 
 form button:hover{
       background-color: #003366;
       color: white;    
+}
+
+
+.todo-container{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.todo-list{
+    list-style-type: none;
+    min-width: 30%;
+
+}
+
+.todo{
+    margin: 0.5rem;
+    background: white;
+    color: black;
+    font-size: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.5 ease;
+}
+
+.todo li{
+    flex: 1;
+}
+
+.delete-btn, .complete-btn{
+    background: #003366;
+    cursor: pointer;
+    font-size: 1rem;
+    border: none;
+    padding: 1rem;
+    color: white;
+
+    
+
+
+
+}
+
+
+}
+
+.todo-item{
+    padding: 0rem 0.5rem ;
+}
+
+.fa-trash,
+.fa-check{
+    pointer-events: none;
+}
+
+.delete-btn:hover{
+    color: white;
+    background-color: red;
+ 
+
+}
+
+.complete-btn:hover{
+    color:white;
+    background-color: green;
+
+}
+
+.completed{
+    text-decoration: line-through;
+    opacity: 0.7;
+}
+
+.fall{
+    transform: translateY(8rem) rotateZ(20deg);
+    opacity: 0;
+
+}
+
+select{
+    -webkit-appearance:none ;
+    -moz-appearance: none;
+    appearance: none;
+    border: none;
+    outline: none;
+     
+}
+.select {
+    margin: 1rem;
+    position: relative;
+    overflow: hidden;
+
+}
+
+select{
+    color: #003366;
+    width: 10rem;
+    cursor: pointer;
+    padding: 1rem;
+}
+
+.select::after{
+    content: "\25BC";
+    position: absolute;
+    background: #003366;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.select:hover:after{
+    background: white;
+    color: #003366;
 }
